# Parser_2GIS

./: pyproject.toml
parser/: main.py  paths.py  tempCodeRunnerFile.py
